# vAssist

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
core/agent/: AgentKernel.cpp  AgentKernel.h
core/providers/: LLMProvider.h  LocalModelProvider.cpp  LocalModelProvider.h  MockProvider.cpp  MockProvider.h  OpenAICompatProvider.cpp  OpenAICompatProvider.h  ProviderManager.h
core/settings/: ProviderSettings.cpp  ProviderSettings.h
ui/: main.qml
ui/components/: ChatBubble.qml  ChatHistoryItem.qml  ChatHistoryItemEx.qml  ChatHistoryList.qml  InputPill.qml  ModelSettingsDialog.qml  SettingsMenu.qml  Sidebar.qml  SidebarItem.qml
